--- a/DAL/bin/DAL.dll.config
+++ b/DAL/bin/DAL.dll.config
@@ -8,5 +8,7 @@
     <compilation debug="true" targetFramework="4.0"/>
     <httpRuntime/>
   </system.web>
-  
+  <appSettings>
+    <add key="constr" value="server=10.10.10.30\SQLSERVER2012;uid=sa;pwd=Vertis!2#;database=AsquareMirai;"/>
+  </appSettings>
 </configuration>
