--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -15,6 +15,7 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="constr" value="server=10.10.10.30\SQLSERVER2012;uid=sa;pwd=Vertis!2#;database=AsquareMirai;"/>
     <add key="SuperAdminEmailId" value="super@admin.com"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -35,6 +36,8 @@
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="SuperAdminEmailId" value="super@admin.com"/>
     <add key="SuperAdminUserPassword" value="sal123"/>
+    <add key="askMiraiLink" value="http://demo.vertisinfotech.com:7171/askMirai/app"/>
+    <add key="FacebookAppKey" value="695496480473715"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
