--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -81,6 +81,15 @@
    
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+         <clear/>
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
+        <add name="Access-Control-Allow-Methods" value="POST, GET, OPTIONS"/>
+       
+      </customHeaders>
+    </httpProtocol>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
@@ -127,6 +136,47 @@
     </defaultConnectionFactory>
   </entityFramework>
   <system.serviceModel>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="True"/>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="TransportSecurity">
+          <security mode="Transport">
+            <transport clientCredentialType="None" />
+          </security>
+        </binding>
+        <binding name="BasicHttpBinding_ILoginService1" />
+      </basicHttpBinding>
+      <webHttpBinding>
+       <binding name="StreamedRequestWebBinding" bypassProxyOnLocal="true" useDefaultWebProxy="false" hostNameComparisonMode="WeakWildcard" sendTimeout="10:15:00" openTimeout="10:15:00" receiveTimeout="10:15:00" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" transferMode="StreamedRequest">
+          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647"/>
+          <security mode="None">
+          </security>
+        </binding>
+      </webHttpBinding>
+    </bindings>
+    <services>
+      <service behaviorConfiguration="ServiceBehaviour" name="Services.UserService">
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding"
+         bindingConfiguration="StreamedRequestWebBinding" contract="Services.IUserService" />
+      </service>
+    </services>
+      <client>
+          <endpoint address="http://localhost:58390/services/LoginService.svc"
+              binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService1"
+              contract="LoginServiceReference1.ILoginService" name="BasicHttpBinding_ILoginService1" />
+      </client>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp automaticFormatSelectionEnabled="true" />
+        </behavior>
+      </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior name="ServiceBehaviour">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" minFreeMemoryPercentageToActivateService="0"/>
   </system.serviceModel>
 </configuration>
