--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\dbConnection.cs" />
+    <Compile Include="Models\Feed.cs" />
     <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Profile.cs" />
@@ -237,11 +238,6 @@
       <DependentUpon>_dbAskMirai.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\LoginServiceReference1\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\UserService.svc.cs">
       <DependentUpon>UserService.svc</DependentUpon>
@@ -607,13 +603,6 @@
     <Content Include="Scripts\otf.js" />
     <Content Include="Scripts\utility.js" />
     <Content Include="Scripts\ViewScrips\QuestionListScript.js" />
-    <None Include="Service References\LoginServiceReference1\UserService.disco" />
-    <None Include="Service References\LoginServiceReference1\configuration91.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\configuration.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="Services\UserService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -690,13 +679,7 @@
     <Content Include="Views\Patients\PatientQuestionDetails.cshtml" />
     <Content Include="Views\admin\assignquestion.cshtml" />
     <Content Include="Views\admin\QuestionList.cshtml" />
-    <None Include="Service References\LoginServiceReference1\UserService.wsdl" />
-    <None Include="Service References\LoginServiceReference1\UserService.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\LoginServiceReference1\UserService1.xsd">
-      <SubType>Designer</SubType>
-    </None>
+    <Content Include="Views\Feed\Feed.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
