--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -211,6 +211,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\admin\AssignQuestion.cs" />
+    <Compile Include="Models\AskDoctor.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\dbConnection.cs" />
@@ -237,11 +238,6 @@
       <DependentUpon>_dbAskMirai.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\LoginServiceReference1\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\UserService.svc.cs">
       <DependentUpon>UserService.svc</DependentUpon>
@@ -607,13 +603,6 @@
     <Content Include="Scripts\otf.js" />
     <Content Include="Scripts\utility.js" />
     <Content Include="Scripts\ViewScrips\QuestionListScript.js" />
-    <None Include="Service References\LoginServiceReference1\UserService.disco" />
-    <None Include="Service References\LoginServiceReference1\configuration91.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\configuration.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="Services\UserService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -691,13 +680,6 @@
     <Content Include="Views\Patients\AskDoctor.cshtml" />
     <Content Include="Views\admin\assignquestion.cshtml" />
     <Content Include="Views\admin\QuestionList.cshtml" />
-    <None Include="Service References\LoginServiceReference1\UserService.wsdl" />
-    <None Include="Service References\LoginServiceReference1\UserService.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\LoginServiceReference1\UserService1.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -719,9 +701,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\LoginServiceReference1\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
