--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -36,9 +36,8 @@
     <add key="SMTPPort" value="587"/>
     <add key="isUseDefaultCredentials" value="false"/>
     <add key="isEnableSSl" value="true"/>
-    <add key="FromEmail" value="support@askmirai.com"/>
     <add key="defaultUrl" value="http://localhost:53706/"/>
-    <add key="askMiraiLink" value="http://demo.vertisinfotech.com:7171/askMirai/app"/>
+    <add key="askMiraiLink" value="http://localhost:53706/"/>
     <add key="FacebookAppKey" value="695496480473715"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
@@ -53,12 +52,12 @@
     <add key="OnPatientThankSendSMS" value="Hello, We are pleased to inform you that the user has thanked you for answering the question. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnRemoveQuestionFromListEmail" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Consult Services Team"/>
     <add key="OnRemoveQuestionFromListSMS" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
-    <add key="FromEmail" value="service@miraihealth.com"/>
+    <add key="FromEmail" value="support@askmirai.com"/>
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
     <add key="shareMessage" value="has invited you to AskMirai"/>
-    <add key="FacebookAppKey" value="695496480473715"/>
+    <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
   </appSettings>
 
