--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -203,20 +203,17 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\RegistrationCouncil.cs" />
+    <Compile Include="Models\Report.cs" />
     <Compile Include="Models\Specialities.cs" />
     <Compile Include="Models\Utilities\UtilityManager.cs" />
-
     <Compile Include="Models\admin\AssignQuestion.cs" />
-
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\dbConnection.cs" />
     <Compile Include="Models\FindDoctorModel.cs" />
-    <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\State.cs" />
@@ -225,10 +222,7 @@
     <Compile Include="Models\User\ChangePassword.cs" />
     <Compile Include="Models\User\Login.cs" />
     <Compile Include="Models\User\ResetPassword.cs" />
-    <Compile Include="Models\doctordetails.cs" />
-    <Compile Include="Models\DoctorLocations.cs" />
     <Compile Include="Models\doctorqualifications.cs" />
-    <Compile Include="Models\DoctorSpecialities.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\ModelUser.cs" />
     <Compile Include="Models\_dbAskMirai.designer.cs">
@@ -237,11 +231,6 @@
       <DependentUpon>_dbAskMirai.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\LoginServiceReference1\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\UserService.svc.cs">
       <DependentUpon>UserService.svc</DependentUpon>
@@ -637,13 +626,6 @@
     <Content Include="Scripts\otf.js" />
     <Content Include="Scripts\utility.js" />
     <Content Include="Scripts\ViewScrips\QuestionListScript.js" />
-    <None Include="Service References\LoginServiceReference1\UserService.disco" />
-    <None Include="Service References\LoginServiceReference1\configuration91.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\configuration.svcinfo" />
-    <None Include="Service References\LoginServiceReference1\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="Services\UserService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -720,10 +702,8 @@
     <Content Include="Views\Patients\AskDoctor.cshtml" />
     <Content Include="Views\admin\assignquestion.cshtml" />
     <Content Include="Views\admin\QuestionList.cshtml" />
-    <None Include="Service References\LoginServiceReference1\UserService.wsdl" />
-    <None Include="Service References\LoginServiceReference1\UserService.xsd">
-      <SubType>Designer</SubType>
-    </None>
+    <Content Include="Views\admin\Report.cshtml" />
+    <Content Include="Views\admin\_Report.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -745,7 +725,6 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{6b65a3ee-e5a5-4bfb-9c30-7ed8382ef7be}</Project>
       <Name>DAL</Name>
@@ -754,12 +733,7 @@
       <Project>{b8fd3a08-c7c8-4e2b-aa31-4343783f0682}</Project>
       <Name>Model</Name>
     </ProjectReference>
-
     <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\LoginServiceReference1\" />
-
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
