--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -203,7 +203,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-
+    <Compile Include="Models\admin\Tags.cs" />
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\RegistrationCouncil.cs" />
@@ -215,7 +215,6 @@
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\dbConnection.cs" />
     <Compile Include="Models\FindDoctorModel.cs" />
-    <Compile Include="Models\Home\Contact.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\State.cs" />
@@ -224,10 +223,7 @@
     <Compile Include="Models\User\ChangePassword.cs" />
     <Compile Include="Models\User\Login.cs" />
     <Compile Include="Models\User\ResetPassword.cs" />
-    <Compile Include="Models\doctordetails.cs" />
-    <Compile Include="Models\DoctorLocations.cs" />
     <Compile Include="Models\doctorqualifications.cs" />
-    <Compile Include="Models\DoctorSpecialities.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\ModelUser.cs" />
     <Compile Include="Models\_dbAskMirai.designer.cs">
@@ -732,7 +728,6 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{6b65a3ee-e5a5-4bfb-9c30-7ed8382ef7be}</Project>
       <Name>DAL</Name>
@@ -741,12 +736,10 @@
       <Project>{b8fd3a08-c7c8-4e2b-aa31-4343783f0682}</Project>
       <Name>Model</Name>
     </ProjectReference>
-
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\LoginServiceReference1\" />
-
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
