Doctor feed page is completed.

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -38,8 +38,6 @@
     <add key="isEnableSSl" value="true"/>
     <add key="FromEmail" value="support@askmirai.com"/>
     <add key="defaultUrl" value="http://localhost:53706/"/>
-    <add key="askMiraiLink" value="http://demo.vertisinfotech.com:7171/askMirai/app"/>
-    <add key="FacebookAppKey" value="695496480473715"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="ResetPasswordLink" value="http://localhost:53706/User/ResetPassword"/>
@@ -58,8 +56,10 @@
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
     <add key="shareMessage" value="has invited you to AskMirai"/>
-    <add key="FacebookAppKey" value="695496480473715"/>
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
+    <add key="FacebookAppKey" value="1480281325544968"/>
+    <add key="askMiraiLink" value="http://localhost:53706"/> 
+    <add key="NumberOfRecored" value="5"/>
   </appSettings>
 
   <system.web>
