--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -713,6 +713,7 @@
     <None Include="Service References\LoginServiceReference1\UserService.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Feed\DoctorFeed.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
