--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -713,6 +713,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\admin\ManageTag.cshtml" />
+    <Content Include="Views\Questions\QuestionDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
