--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -714,7 +714,8 @@
     </None>
     <Content Include="Views\Feed\DoctorFeed.cshtml" />
     <Content Include="Views\admin\ManageTag.cshtml" />
-	<Content Include="Views\Patients\Myactivity.cshtml" />
+    <Content Include="Views\Patients\Myactivity.cshtml" />
+    <Content Include="Views\Patients\similarQuestions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
