patient profile & doctor profile is done

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -17,8 +17,6 @@
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="SuperAdminEmailId" value="super@admin.com"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -59,6 +57,9 @@
     <add key="shareMessage" value="has invited you to AskMirai"/>
     <add key="FacebookAppKey" value="695496480473715"/>
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
+    <add key="EmailVerificationLink" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
+    <add key="DoctorPhotosUrl" value="http://localhost:58390/app/"/>
+    <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Controllers\DoctorPhotos"/>
   </appSettings>
 
   <system.web>
