--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Answer.cs" />
     <Compile Include="DoctorLocations.cs" />
     <Compile Include="doctorqualification.cs" />
-    <Compile Include="DoctorSpecialities.cs" />
+    <Compile Include="DoctorSpeciality.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="Tag.cs" />
