--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -55,7 +55,7 @@
     <add key="websiteUrl" value="consult.miraihealth.com"/>
     <add key="shareMessage" value="has invited you to AskMirai"/>
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
-    <add key="EmailVerificationLink" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
+    <add key="EmailVerificationLink" value="http://localhost:53706/User/Verifyemail"/>
     <add key="DoctorPhotosUrl" value="http://localhost:58390/app/"/>
     <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Controllers\DoctorPhotos"/>
     <add key="FacebookAppKey" value="1480281325544968"/>
