--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -26,7 +26,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
-    <add key="ErrorEmailID" value="yashwant@vertisinfotech.com"/>
+    <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
     <add key="isSMTPAuthentication" value="true"/>
     <add key="SMTPSERVER" value="smtp.gmail.com"/>
     <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
@@ -56,8 +56,8 @@
     <add key="shareMessage" value="has invited you to AskMirai"/>
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
     <add key="EmailVerificationLink" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
-    <add key="DoctorPhotosUrl" value="http://localhost:58390/app/"/>
-    <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Controllers\DoctorPhotos"/>
+    <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
+    <add key="DoctorPhotosPath" value="G:\Projects\consult-mvc\MiraiConsultMVC\Content\image\DoctorPhotos"/>
     <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="askMiraiLink" value="http://localhost:53706"/> 
     <add key="NumberOfRecored" value="5"/>
