Updated for config changes

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -57,7 +57,7 @@
     <add key="DocConnectApptUrl" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
     <add key="EmailVerificationLink" value="http://localhost:58390/app/book/appointment.aspx?doc="/>
     <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
-    <add key="DoctorPhotosPath" value="G:\Projects\consult-mvc\MiraiConsultMVC\Content\image\DoctorPhotos"/>
+    <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\DoctorPhotos"/>
     <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="askMiraiLink" value="http://localhost:53706"/> 
     <add key="NumberOfRecored" value="5"/>
