--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -61,6 +61,8 @@
     <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="askMiraiLink" value="http://localhost:53706"/> 
     <add key="NumberOfRecored" value="5"/>
+    <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
+    <add key="BookAppointmentLink" value="http://localhost:51418/app/book/appointment.aspx"/>
   </appSettings>
 
   <system.web>
