--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -63,6 +63,7 @@
     <add key="NumberOfRecored" value="5"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://localhost:51418/app/book/appointment.aspx"/>
+    <add key="website" value="consult.miraihealth.com"/>
   </appSettings>
 
   <system.web>
