--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -47,7 +47,7 @@
     <add key="OnDocAnswerQuestionSendSMS" value="Hello, On behalf of Mirai Health and the user, thank you for answering the question. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnPatientThankSendEmail" value="We are pleased to inform you that the user has thanked you for answering the question."/>
     <add key="OnPatientThankSendSMS" value="Hello, We are pleased to inform you that the user has thanked you for answering the question. Mirai Health Team (service@miraihealth.com)"/>
-    <add key="OnRemoveQuestionFromListEmail" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Consult Services Team"/>
+    <add key="OnRemoveQuestionFromListEmail" value="Hello, Your question was considered inappropriate and has been rejected by the administrator."/>
     <add key="OnRemoveQuestionFromListSMS" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
     <add key="FromEmail" value="support@askmirai.com"/>
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
