--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -196,7 +196,6 @@
     <Compile Include="Controllers\adminController.cs" />
     <Compile Include="Controllers\DoctorsController.cs" />
     <Compile Include="Controllers\FeedController.cs" />
-    <Compile Include="Controllers\FindDoctorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PatientsController.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
@@ -439,6 +438,7 @@
       <SubType>Designer</SubType>
     </Content>
     <None Include="Properties\PublishProfiles\consult.pubxml" />
+    <None Include="Properties\PublishProfiles\ConsultToStaging.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\bootstrap-alert.js" />
     <Content Include="Scripts\bootstrap-button.js" />
@@ -555,7 +555,7 @@
     <Content Include="Views\User\ManageDoctors.cshtml" />
     <Content Include="Views\Shared\_AutoCompleteSearch.cshtml" />
     <Content Include="Views\Patients\PatientQuestionDetails.cshtml" />
-    <Content Include="Views\FindDoctor\FindDoctors.cshtml" />
+    <Content Include="Views\Home\FindDoctors.cshtml" />
     <Content Include="Views\Patients\AskDoctor.cshtml" />
     <Content Include="Views\admin\assignquestion.cshtml" />
     <Content Include="Views\admin\Report.cshtml" />
@@ -572,7 +572,7 @@
     <Content Include="Views\Patients\similarQuestions.cshtml" />
     <Content Include="Views\User\DoctorSignUp.cshtml" />
     <Content Include="Views\User\Verifyemail.cshtml" />
-    <Content Include="Views\Home\NoPrivilegeError.cshtml" />
+    <Content Include="Views\Home\topics.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
