Askmirai is replaced with Mirai Consult

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -55,7 +55,7 @@
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
-    <add key="shareMessage" value="has invited you to AskMirai"/>
+    <add key="shareMessage" value="has invited you to Mirai Consult"/>
     <add key="DocConnectApptUrl" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="EmailVerificationLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
