Fixed issue of share website from facebook was not working correct.

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -61,7 +61,7 @@
     <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
     <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\DoctorPhotos"/>
     <add key="FacebookAppKey" value="1480281325544968"/>
-    <add key="askMiraiLink" value="http://localhost:53706"/> 
+    <add key="askMiraiLink" value="http://localhost:53706/"/> 
     <add key="NumberOfRecored" value="5"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
