--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient"/>
@@ -69,6 +70,7 @@
   </appSettings>
 
   <system.web>
+    <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="On" >
       </customErrors>
     <compilation debug="true" targetFramework="4.5"/>
@@ -190,5 +192,4 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  
 </configuration>
