committing Web.config file

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -10,7 +10,6 @@
 
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient"/>
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.30\SQLSERVER2012;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=Vertis!2#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
@@ -66,6 +65,7 @@
     <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="askMiraiLink" value="http://localhost:53706/"/> 
     <add key="NumberOfRecored" value="5"/>
+    <add key="NumberOfTags" value="20"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
