--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -14,7 +14,8 @@
   </connectionStrings>
   <appSettings>
     <add key="NumberOfRecored" value="5"/>
-    <add key="constr" value="server=10.10.10.36\SQLEXPRESS;uid=sa;pwd=Vertis!2#;database=AsqaureMirai_Staging;"/>
+    <add key="constr" value="server=10.10.10.36\SQLEXPRESS;uid=sa;pwd=Vertis!2#;database=AsqaureMirai;"/>
+
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true"/>
