changes config dll

--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -10,12 +10,11 @@
 
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient"/>
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.30\SQLSERVER2012;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=Vertis!2#" providerName="System.Data.SqlClient"/>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=SQL2012;Initial Catalog=AsquareMirai_Staging;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="NumberOfRecored" value="5"/>
-    <add key="constr" value="server=10.10.10.30\SQLSERVER2012;uid=sa;pwd=Vertis!2#;database=AsquareMirai;"/>
+    <add key="constr" value="server=SQL2012;uid=sa;pwd=vertis!2#;database=AsquareMirai;"/>
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true"/>
@@ -28,16 +27,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
     <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
-    
-   <add key="isSMTPAuthentication" value="true"/>
-   <add key="SMTPSERVER" value="smtp.gmail.com"/>
-   <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
-   <add key="SmtpServerUsername" value="noreply@vertisinfotech.com"/>
-   <add key="SmtpServerPassword" value="Smtp!2#4"/>
-   <add key="SMTPPort" value="587"/>
-   <add key="isUseDefaultCredentials" value="false"/>
-   <add key="isEnableSSl" value="true"/>
-   
+    <add key="isSMTPAuthentication" value="true"/>
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
+    <add key="SMTPSERVER" value="smtpout.secureserver.net" />
+    <add key="SmtpServerUsername" value="service@miraihealth.com" />
+    <add key="SmtpServerPassword" value="ServiceMiraiHealth0114" />
+    <add key="SMTPPort" value="25" />
+    <add key="isUseDefaultCredentials" value="false"/>
+    <add key="isEnableSSl" value="true"/>
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
@@ -64,15 +61,16 @@
     <add key="FacebookAppKey" value="1480281325544968"/>
     <add key="askMiraiLink" value="http://localhost:53706/"/> 
     <add key="NumberOfRecored" value="5"/>
+    <add key="NumberOfTags" value="20"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
   </appSettings>
-
   <system.web>
     <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="On" >
-      </customErrors>
+      <error statusCode="404" redirect="~/Home/Static404" />
+    </customErrors>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
     <authentication mode="Forms">
@@ -89,7 +87,6 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
-   
   </system.web>
   <system.serviceModel>
     <bindings>
