font changed, similar page appt button added, aligned proper for responsive

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -584,6 +584,7 @@
     <Content Include="Views\Shared\_GoogleAnalytics.cshtml" />
     <Content Include="Views\Home\Static404.cshtml" />
     <Content Include="Views\Doctors\doctorsPublicProfile.cshtml" />
+    <Content Include="Views\Doctors\ContactDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
