Completed SignUp With Doctor functionality.

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -66,6 +66,12 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
+    <add key="QuickBloxApplicationId" value="18010"/>
+    <add key="QuickBloxAuthKey" value="F4O9nFTMU9OjEw9"/>
+    <add key="QuickBloxAuthSecret" value="b54aKvW-2k8eyx8"/>
+    <add key="UserLoginId" value ="rohitm"/>
+    <add key="UserLoginPassword" value="rohit123"/>
+    <add key="QuickbloxUserPassword" value="Asquaremirai"/>
   </appSettings>
   <system.web>
     <globalization culture="en-US" uiCulture="en"/>
