Completed Update user detail on quickblox when user changes email on consult.

--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -66,12 +66,11 @@
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
-    <add key="QuickBloxApplicationId" value="18010"/>
-    <add key="QuickBloxAuthKey" value="F4O9nFTMU9OjEw9"/>
-    <add key="QuickBloxAuthSecret" value="b54aKvW-2k8eyx8"/>
-    <add key="UserLoginId" value ="rohitm"/>
-    <add key="UserLoginPassword" value="rohit123"/>
-    <add key="QuickbloxUserPassword" value="Asquaremirai"/>
+    <add key="QuickBloxApplicationId" value="18682"/>
+    <add key="QuickBloxAuthKey" value="8gOfAeSA2uHApJg"/>
+    <add key="QuickBloxAuthSecret" value="s725VxQ6sqWZBnz"/>
+    <add key="QuickBloxUserLoginId" value ="varsha.bawari@vertisinfotech.com"/>
+    <add key="QuickBloxUserLoginPassword" value="varshabawari"/>
   </appSettings>
   <system.web>
     <globalization culture="en-US" uiCulture="en"/>
